# VariationalAutoEncoder-with-CFD

./: CMakeLists.txt  README.md  autoencoder.py  cylinder.cpp  data_loader.py  error.py  error_lstm.py  lstm.py  lstm_plot.py  plotter.py  png2gif.sh  png2mp4.sh  stepper.py  test_plot.py  vae.py  vae_plot.py
